sfdx-source/force-app/main/default/objects/Activation_Checklist__c/Activation_Checklist__c.object-meta.xml
<CustomObject>
    <description>LEM-13305: It is used to store the validations and their statuses required for Store Account activations.</description>
    <label>Activation Checklist</label>
    <nameField>
        <label>Activation Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activation Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>