sfdx-source/force-app/main/default/objects/Activation_Checklist__c/fields/Activation_Validation_Name__c.field-meta.xml
<CustomField>
    <fullName>Activation_Validation_Name__c</fullName>
    <description>LEM-13305: It is used to store the list of validations required for activation.</description>
    <label>Activation Validation Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Activation_Validation_Name</valueSetName>
    </valueSet>
</CustomField>