sfdx-source/force-app/main/default/objects/Activation_Checklist__c/fields/MINT_Store_Page__c.field-meta.xml
<CustomField>
    <fullName>MINT_Store_Page__c</fullName>
    <formula>HYPERLINK($CustomMetadata.Static_Configurations__mdt.MINT_Store_Page_URL.Configuration_Value__c + Store_Id__c, Store_Id__c, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store ID</label>
    <type>Text</type>
</CustomField>