sfdx-source/force-app/main/default/objects/Activation_Checklist__c/fields/MINT_Value__c.field-meta.xml
<CustomField>
    <fullName>MINT_Value__c</fullName>
    <description>LEM-13305: It is used store the MINT Value of the validation.</description>
    <label>MINT Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>