sfdx-source/force-app/main/default/objects/Activation_Checklist__c/fields/Parent_Work_Step__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-13305: It is used to store the parent Activation Checklist Work Step associated with the Activation Checklist.</description>
    <label>Parent Work Step</label>
    <referenceTo>WorkStep</referenceTo>
    <relationshipLabel>Activation Checklists</relationshipLabel>
    <relationshipName>Activation_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>