sfdx-source/force-app/main/default/objects/Activation_Checklist__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>LEM-13304: It is used to store the status message based on activation checklist status.</description>
    <label>Result</label>
    <type>TextArea</type>
</CustomField>