sfdx-source/force-app/main/default/objects/Activation_Checklist__c/fields/SFDC_Value__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Value__c</fullName>
    <description>LEM-13305: It is used to store the SFDC Value of the validation.</description>
    <label>SFDC Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>