sfdx-source/force-app/main/default/objects/Activation_Checklist__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>LEM-13304: It is used to store the object from which the field values are used for validation</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>