sfdx-source/force-app/main/default/objects/Activation_Checklist__c/fields/Store_Account__c.field-meta.xml
<CustomField>
    <fullName>Store_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-13305: It is used to store the Store Account to which the Activation Checklist is associated.</description>
    <label>Store Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Store</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Activation Checklists</relationshipLabel>
    <relationshipName>Activation_Checklists</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>