sfdx-source/force-app/main/default/objects/Activation_Checklist__c/fields/Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Store_Id__c</fullName>
    <description>LEM-13303: It is used to store the Store Id associated to the Activation Checklist.</description>
    <label>Store Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>