sfdx-source/force-app/main/default/objects/Activation_Checklist__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <description>LEM-13612: It is used to store the object for which the check is created.</description>
    <label>Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>