sfdx-source/force-app/main/default/objects/Activation_Checklist__c/fields/Work_Plan__c.field-meta.xml
<CustomField>
    <fullName>Work_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Plan</label>
    <referenceTo>WorkPlan</referenceTo>
    <relationshipLabel>Activation Checklists</relationshipLabel>
    <relationshipName>AC_Work_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>