sfdx-source/force-app/main/default/objects/Activation_Checklist__c/fields/Work_Step__c.field-meta.xml
<CustomField>
    <fullName>Work_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-13305: It is used to store the Activation Checklist Work Step associated with the Store Account.</description>
    <label>Work Step</label>
    <referenceTo>WorkStep</referenceTo>
    <relationshipLabel>Activation Checklists (Work Step)</relationshipLabel>
    <relationshipName>Activation_Checklists1</relationshipName>
    <type>Lookup</type>
</CustomField>