sfdx-source/force-app/main/default/objects/Activation_Checklist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Work_Plan__c</columns>
    <columns>Activation_Validation_Name__c</columns>
    <columns>SFDC_Value__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Result__c</columns>
    <columns>Target__c</columns>
    <columns>Parent_Work_Step__c</columns>
    <columns>Status__c</columns>
    <columns>Store_Account__c</columns>
    <columns>Work_Step__c</columns>
    <columns>MINT_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>